--- a/Olio ohjelmoinnin eka tunti/Olio ohjelmoinnin eka tunti.csproj
+++ b/Olio ohjelmoinnin eka tunti/Olio ohjelmoinnin eka tunti.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Olio-Ohjelmointi 10.1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
